docs/i18n/no/docusaurus-plugin-content-docs/version-1.3/shortcuts.md
---
title: "Snarveier"
sidebar_position: 2
---

Det er noen snarveier du kan benytte i editoren. Noen av dem er skrevet under knappene.

## Generelt

* `Ctrl` + `N`: Ny fil
* `Ctrl` + `Shift` + `N`: Ny fil fra mal
* `Ctrl` + `O`: Åpne filen
* `Ctrl` + `Jeg`: Importere fil
* `Ctrl` + `E`: Eksportfil
* `Ctrl` + `Shift` + `E`: Eksporter fil som bilde
* `Ctrl` + `Alt` + `E`: Eksporter filen som svg
* `Ctrl` + `Alt` + `S`: Åpne innstillinger

## Prosjekt

* `Ctrl` + `Z`: Angre
* `Ctrl` + `Y`: Gjør om igjen
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Åpne prosjektinnstillinger
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Automatisk fargepalett dialog
* `Ctrl` + `B`: Åpne bakgrunnsdialog
* `Ctrl` + `Shift` + `A`: Åpne områder dialog
* `Ctrl` + `L`: Åpne lag-dialog
* `Ctrl` + `S`: Lagre
* `Alt` + `S`: Endre bane
