docs/i18n/no/docusaurus-plugin-content-docs/version-1.5/shortcuts.md
---
title: "Snarveier"
sidebar_position: 2
---


## Keyboard

Det er noen snarveier du kan benytte i editoren. Noen av dem er skrevet under knappene.

### Generelt

* `Ctrl` + `N`: Ny fil
* `Ctrl` + `Shift` + `N`: Ny fil fra mal
* `Ctrl` + `O`: Åpne filen
* `Ctrl` + `Jeg`: Importere fil
* `Ctrl` + `E`: Eksportfil
* `Ctrl` + `Shift` + `E`: Eksporter fil som bilde
* `Ctrl` + `Alt` + `E`: Eksporter filen som svg
* `Ctrl` + `Alt` + `S`: Åpne innstillinger

### Prosjekt

* `Ctrl` + `Z`: Angre
* `Ctrl` + `Y`: Gjør om igjen
* `Ctrl` + `Alt` + `N`: Open insert dialog
* `Ctrl` + `Alt` + `Shift` + `S`: Åpne prosjektinnstillinger
* `Ctrl` + `Shift` + `P`: Open waypoints dialog
* `Ctrl` + `P`: Automatisk fargepalett dialog
* `Ctrl` + `B`: Åpne bakgrunnsdialog
* `Ctrl` + `Shift` + `A`: Åpne områder dialog
* `Ctrl` + `L`: Åpne lag-dialog
* `Ctrl` + `S`: Lagre
* `Alt` + `S`: Endre bane
* `Ctrl` + (`1` - `0`): Bytt til maling

## Stylus

* `Primærknapp`: Bytt til håndverktøy
* `Sekundær knapp`: Endre til annen maling

## Konfigurer {#configure}

Tilpass styringen ved å gi hver enkelt kontroll en malerindeks. Malerindeksen starter på 1 og sorteres fra venstre til høyre. En tom malerindeks vil deaktivere malerbryteren på denne kontrollen. Sett inn `0` for å aktivere flytting med denne kontrollen.
